# win-desktop-switcher

./: .gitignore  Cargo.toml  README.md  config.toml  install.ps1  uninstall.ps1
mvp/: animations.html  index.html
src/: autostart.rs  config.rs  desktop.rs  hotkey.rs  main.rs  overlay.rs  slide_overlay.rs  touch.rs  tray.rs  wheel.rs
