[package]
name = "win_desktop_swither"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
winvd = "0.0.49"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
crossbeam-channel = "0.5"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Input_Pointer",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_System_Registry",
] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
debug = false
